
        - monotone does no longer enforce ".mtn" as file extension
          for managed databases.  Instead a new Lua hook,
          get_default_database_glob(), is used to determine a pattern
          which matches accepted database filenames and this pattern
          by default accept files ending with both, ".mtn" and ".db".
          (fixes monotone issue 128)

        Internal

        - The source tree has been reorganized. Sources, tests and documentation
          now reside in specific directories and many smaller improvements in
          terms of source code cleanup, developer documentation and general build
          infrastructure accompany this big change.

        Other

        - Added the mtn-cleanup Perl script that returns a workspace to its
          pristine state with the minimum amount of change. This script is
          under the contrib directory.


Sun Oct 31 21:51:16 UTC 2010

        0.99.1 release.

        Bugs fixed

        - monotone crashed on x86_64 when a netsync action required
          the parsing of an URL. This has been fixed.
          (closes monotone issue 100)

        - monotone's automation interface version was reported wrongly
          as 12.1, where it should have been 13.0.


Thu Oct 28 21:07:18 UTC 2010

        0.99 release.

        Changes

        - The database scheme was changed; please execute 'mtn db migrate'
          on all your local and remote databases.

        - Normal and automate sync, push, and pull now take a
          --dry-run option; no data is transferred, but the connection
          is made and a summary of what would be transferred is
          output.

        - The changelog editor format was simplified; user entered text
          is back at the top of file and the instructions have been reduced.
          The edited text is saved now even if a commit is canceled.

        - Selectors are much more powerful now and selector functions to